--- a/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
+++ b/src/app/modules/developer/Components/developer-session-details/developer-session-details.component.html
@@ -97,8 +97,8 @@
                         <div class="mb-6">
                            <h6>Mentor Info</h6>
                            <p class="mb-1 lh-lg text-muted">
-
-                              <img src="{{sessiondetails?.MentorImage}}" class="rounded-circle" style="width: 70px;">
+                             
+                              <img src="http://localhost:5164/{{sessiondetails?.MentorImage}}" class="rounded-circle" style="width: 70px;">
 
                               <br>
                               {{sessiondetails?.MentorFirstName}} {{sessiondetails?.MentorLastName}}
