--- a/src/app/modules/developer/Components/query/query.component.html
+++ b/src/app/modules/developer/Components/query/query.component.html
@@ -38,7 +38,7 @@
         <hr>
         @if(mentor){
         <div class="row align-items-center  p-1">
-          <img src="{{mentor.Image}}" alt="dina" class="col-3  mr-3" style="  border-radius:13px !important;"
+          <img src="http://localhost:5164/{{mentor.Image}}" alt="dina" class="col-3  mr-3" style="  border-radius:13px !important;"
             width="100">
 
 
