--- a/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
+++ b/src/app/modules/mentor/Components/mentor-answer-query/mentor-answer-query.component.html
@@ -16,7 +16,7 @@
 
               <div class="row">
                 <span class="me-0 position-relative mt-4 justify-content-end align-items-end mt-n5 col-lg-3 col-12">
-                  <img src="{{query.UserImageUrl}}" class="avatar-xl  border border-4 border-white"
+                  <img src="http://localhost:5164/{{query.UserImageUrl}}" class="avatar-xl  border border-4 border-white"
                     style="height: 150px; size: 5px; width: 100%; border-radius: 13px;" alt="avatar">
                 </span>
                 <span class="d-block  col-lg-9 col-12 mt-0 mb-0">
