--- a/src/app/modules/developer/Components/mentor-reply/mentor-reply.component.html
+++ b/src/app/modules/developer/Components/mentor-reply/mentor-reply.component.html
@@ -15,7 +15,7 @@
             <div class="col-lg-8 col-md-8 col-7 mb-0 mb-lg-0">
               <div class="row">
                 <span class="me-0 position-relative mt-4 justify-content-end align-items-end mt-n5 col-lg-3 col-12">
-                  <img src="{{query.MentorImageUrl}}" class="avatar-xl  border border-4 border-white"
+                  <img src="http://localhost:5164/{{query.MentorImageUrl}}" class="avatar-xl  border border-4 border-white"
                     style="height: 180px; size: 25px; border-radius: 13px;" alt="avatar">
                 </span>
 
