--- a/src/app/modules/developer/Components/query-answer/query-answer.component.html
+++ b/src/app/modules/developer/Components/query-answer/query-answer.component.html
@@ -34,7 +34,7 @@
                             class="avatar-xl rounded-circle border border-4 border-white"
                             style="height: 70px; size: 6px;" alt="avatar"> -->
 
-                        <img src="{{mentor.Image}}" class="avatar-xl rounded-circle border border-4 border-white"
+                        <img src="http://localhost:5164/{{mentor.Image}}" class="avatar-xl rounded-circle border border-4 border-white"
                             style="height: 70px; size: 6px;" alt="avatar">
                         <div class="comment-content">
 
@@ -88,7 +88,7 @@
                                             <div class="comment-actions">
 
                                                 <div class="mt-3 me-5 d-flex justify-content-between">
-                                                    <p><strong class="ms-2"><img src="{{userQueries.UserImageUrl}}"
+                                                    <p><strong class="ms-2"><img src="http://localhost:5164/{{userQueries.UserImageUrl}}"
                                                                 class="avatar-xl rounded-circle border border-4 border-white"
                                                                 style="height: 70px; size: 6px;" alt="avatar"> </strong>
                                                         {{ userQueries.Question }}
@@ -129,7 +129,7 @@
                                             <div class="comment-actions">
 
                                                 <div class="mt-3 me-5 ms-2 d-flex justify-content-between">
-                                                    <p class="ms-2"><strong class=""><img src="{{user.Image}}"
+                                                    <p class="ms-2"><strong class=""><img src="http://localhost:5164/{{user.Image}}"
                                                                 class="avatar-xl rounded-circle border border-4 border-white"
                                                                 style="height: 70px; size: 6px;" alt="avatar"></strong>
                                                         {{answer.Answer}}</p>
@@ -166,7 +166,7 @@
                                             <div class="comment-actions ">
 
                                                 <div class="mt-3 me-5 ms-2 d-flex">
-                                                    <p class="ms-2"><strong class=""><img src="{{mentor.Image}}"
+                                                    <p class="ms-2"><strong class=""><img src="http://localhost:5164/{{mentor.Image}}"
                                                                 class="avatar-xl rounded-circle border border-4 border-white"
                                                                 style="height: 70px; size: 6px;" alt="avatar"></strong>
                                                         {{answer.Answer}}</p>
