--- a/src/app/modules/developer/Components/hr-profile/hr-profile.component.html
+++ b/src/app/modules/developer/Components/hr-profile/hr-profile.component.html
@@ -34,7 +34,7 @@
                         </div>
                         <!--button-->
                         <div class="d-flex flex-row gap-3 align-items-center custom-flex-col">
-                          <a [routerLink]="['/developer/booking/',hrId]" class="btn btn btn-outline-primary">
+                          <a [routerLink]="['/developer/booking/',id]" class="btn btn btn-outline-primary">
                            
                             <i class="fa-regular fa-handshake"></i>
                             Book Session
