--- a/src/app/modules/developer/Components/mentor-profile/mentor-profile.component.html
+++ b/src/app/modules/developer/Components/mentor-profile/mentor-profile.component.html
@@ -316,7 +316,7 @@
                   <div class="education-item">
                     <div class="img vertical-align institute-logo" style="padding-bottom: 60px; align-items: start;">
                       <img width="36" height="36" loading="lazy"
-                        src="http://localhost:5164/Univeristy_Default/UniveristyDefault.jpg"
+                     src="http://localhost:5164/Univeristy_Default/defaults.jfif"
                         alt="{{education.University}}" class="ng-star-inserted">
                     </div>
                     <div class="education-details">
@@ -398,7 +398,7 @@
                   <div class="education-item">
                     <div class="img vertical-align institute-logo" style="padding-bottom: 60px; align-items: start;">
                       <img width="36" height="36" loading="lazy"
-                        src="http://localhost:5164/Univeristy_Default/UniveristyDefault.jpg"
+                     src="http://localhost:5164/Univeristy_Default/defaults.jfif"
                         alt="{{experience.Organization}}" class="ng-star-inserted">
                     </div>
                     <div class="education-details">
