--- a/src/app/modules/hr/Components/session-details/session-details.component.html
+++ b/src/app/modules/hr/Components/session-details/session-details.component.html
@@ -91,7 +91,7 @@
                                <br>
                                Full Stack .Net Developer
                             </p>
-                            <a href="#">View Profile</a>
+                            <a >View Profile</a>
                          </div>
                       </div>
                      
