--- a/src/app/modules/mentor/Components/session-details/session-details.component.html
+++ b/src/app/modules/mentor/Components/session-details/session-details.component.html
@@ -99,7 +99,7 @@
                               <br>
                               {{sessiondetails.UserTitle}}
                            </p>
-                           <a [routerLink]="['/mentors',sessiondetails.UserId]">View Profile</a>
+                           <a [routerLink]="['/developers',sessiondetails.UserId]">View Profile</a>
                         </div>
                      </div>
 
