--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -100,7 +100,7 @@
           <li>
             <hr class="dropdown-divider">
           </li>
-          <li><a class="dropdown-item text-muted" routerLink="/developer/profile"><i class="bi bi-person fa-fw me-2"></i>Profile</a></li>
+          <li><a class="dropdown-item text-muted" routerLink="/developer/profile/Developer"><i class="bi bi-person fa-fw me-2"></i>Profile</a></li>
           <li><a class="dropdown-item bg-danger-soft-hover text-muted" (click)="logout()"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
         </ul>
       </div>
