--- a/src/app/modules/developer/Components/profile-layout/profile-layout.component.css
+++ b/src/app/modules/developer/Components/profile-layout/profile-layout.component.css
@@ -148,6 +148,13 @@
   margin-top: 30px;
   margin-bottom: 30px;
 }
+@media (min-width: 996px) and (max-width: 1195px) {
+  .custom-margins{
+    margin-left: 70px !important;
+   
+  }
+
+}
 @media (min-width: 768px) and (max-width: 995px) {
   .custom-margins{
     margin-left: 100px !important;
@@ -155,6 +162,27 @@
 }
 @media (max-width: 767px) {
   .custom-margins{
-    margin-left: auto !important;
+    /* margin-left: auto !important; */
+    margin-left: 0px !important;
+
+  }
+}
+
+@media (min-width: 997px) and (max-width: 1193px) {
+  .col-lg-8{
+    width: 75%;
+  }
+}
+@media (min-width:980px) and (max-width: 997px) {
+  .col-lg-8{
+    width: 75%;
+  }
+}
+@media  (max-width: 764px) {
+  .col-lg-8{
+    width: 90% !important;
+  }
+  .col-md-8{
+    width: 90% !important;
   }
 }
