--- a/src/app/modules/hr/Components/booking-hr/booking-hr.component.html
+++ b/src/app/modules/hr/Components/booking-hr/booking-hr.component.html
@@ -46,7 +46,7 @@
   
               <!-- Button -->
               <div class="mt-2 mt-md-0">
-                <a href="#" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
+                <a  [routerLink]="['/hr/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
               </div>
             </div>
   
@@ -65,7 +65,7 @@
   
                 <div class="col-md-4">
                   <span class="text-muted">Booked by</span>
-                  <h6 class="mb-0 mt-1">{{ booking.User_FirstName }} {{ booking.User_LastName }}</h6>
+                  <h6 class="mb-0 mt-1">{{ booking?.User_FirstName }} {{ booking?.User_LastName }}</h6>
                 </div>
               </div>
             </div>
@@ -104,7 +104,7 @@
   
               <!-- Button -->
               <div class="mt-2 mt-md-0">
-                <a href="#" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
+                <a  [routerLink]="['/hr/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
               </div>
             </div>
   
@@ -123,7 +123,7 @@
   
                 <div class="col-md-4">
                   <span class="text-muted">Booked by</span>
-                  <h6 class="mb-0 mt-1">{{ booking.User_FirstName }} {{ booking.User_LastName }}</h6>
+                  <h6 class="mb-0 mt-1">{{ booking?.User_FirstName }} {{ booking?.User_LastName }}</h6>
                 </div>
               </div>
             </div>
@@ -161,7 +161,7 @@
   
               <!-- Button -->
               <div class="mt-2 mt-md-0">
-                <a href="#" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
+                <a  [routerLink]="['/hr/session-details', booking.Id ]" class="btn btn-primary-soft mb-0  me-lg-5">More Details</a>
               </div>
             </div>
   
@@ -180,7 +180,7 @@
   
                 <div class="col-md-4">
                   <span class="text-muted">Booked by</span>
-                  <h6 class="mb-0 mt-1">{{ booking.User_FirstName }} {{ booking.User_LastName }}</h6>
+                  <h6 class="mb-0 mt-1">{{ booking?.User_FirstName }} {{ booking?.User_LastName }}</h6>
                 </div>
               </div>
             </div>
