--- a/src/app/modules/mentor/components/sidebarlayout/sidebarlayout.component.html
+++ b/src/app/modules/mentor/components/sidebarlayout/sidebarlayout.component.html
@@ -18,11 +18,11 @@
       </button>
     </div>
     <div class="logout-section mt-3">
-      <button class="btn btn-danger d-flex justify-content-center align-items-center wide-button " (click)="backhome()" style="background-color: black; width: 200px; border: none;">
-        <i [class]="homeItem.icon" style="color: white; ;"></i> <!-- Bind logout icon -->
-        {{ homeItem.label }} <!-- Bind logout label -->
-      </button> <!-- Logout Icon -->
-         
+      <!-- <button class="btn btn-danger d-flex justify-content-center align-items-center wide-button " (click)="backhome()" style="background-color: black; width: 200px; border: none;">
+        <i [class]="homeItem.icon" style="color: white; ;"></i> 
+        {{ homeItem.label }} 
+      </button> 
+          -->
        
     </div>
   </ul>
