--- a/src/app/modules/developer/Components/about-us/about-us.component.html
+++ b/src/app/modules/developer/Components/about-us/about-us.component.html
@@ -8,7 +8,7 @@
         the opportunity to thrive. With a wealth of expertise across recruitment,
          talent management, and employee development.</p>
   <!-- <button type="button" class="btn btn-primary"> -->
-    <a  [routerLink]="['/developer/hrs']" class="btn btn-primary">See More</a>
+    <a  [routerLink]="['/developer/hrs']" class="btn btn-primary mt-4" style="padding:1.3% 6%; font-size: 22px;">See More</a>
     <!-- </button> -->
     </div>
     <div class="col-lg-6">
@@ -123,7 +123,7 @@
               and passion to guide others on their personal and professional journeys. 
               They’re committed to sharing their expertise, offering insights.</p>
             <!-- <button type="button" class="btn btn-primary"> -->
-               <a  [routerLink]="['/developer/mentors']" class="btn btn-primary">See More</a>
+               <a  [routerLink]="['/developer/mentors']" class="btn btn-primary mt-4"  style="padding:1.3% 6%; font-size: 22px;">See More</a>
               <!-- </button> -->
           </div>
           <div class="col-lg-6">
