--- a/src/app/modules/developer/Components/query-answer/query-answer.component.html
+++ b/src/app/modules/developer/Components/query-answer/query-answer.component.html
@@ -94,6 +94,14 @@
                                                         {{ userQueries.Question }}
                                                     </p>
                                                     @if(userQueries.File ){
+                                                        <a 
+                                                         
+                                                        class="btn btn-outline-primary btn-sm ms-0" 
+                                                        style="border-radius: 25px;" 
+                                                        (click)="downloadFile(userQueries.File)">
+                                                        Download File
+                                                     </a>
+                                                        
                                                         <a class="btn btn-outline-primary btn-sm ms-0 align-items-end justify-content-end"
                                                             style="border-radius: 25px;"
                                                             href="http://localhost:5164/{{userQueries.File}}"
@@ -134,6 +142,14 @@
                                                                 style="height: 70px; size: 6px;" alt="avatar"></strong>
                                                         {{answer.Answer}}</p>
                                                     @if(answer.FilePath ){
+                                                       
+                                                        <a 
+                                                         
+                                                        class="btn btn-outline-primary btn-sm ms-0" 
+                                                        style="border-radius: 25px;" 
+                                                        (click)="downloadFile(answer.FilePath)">
+                                                        Download File
+                                                     </a>
                                                     <a class="btn btn-outline-primary btn-sm ms-0 align-items-end justify-content-end"
                                                         style="border-radius: 25px;"
                                                         href="http://localhost:5164/{{answer.FilePath}}"
@@ -171,7 +187,16 @@
                                                                 style="height: 70px; size: 6px;" alt="avatar"></strong>
                                                         {{answer.Answer}}</p>
                                                     @if(answer.FilePath){
-                                                    <a class="btn btn-outline-primary btn-sm ms-0  "
+
+                                                        <a 
+                                                         
+                                                        class="btn btn-outline-primary btn-sm ms-0" 
+                                                        style="border-radius: 25px;" 
+                                                        (click)="downloadFile(answer.FilePath)">
+                                                        Download File
+                                                     </a>
+                                                     
+                                                        <a class="btn btn-outline-primary btn-sm ms-0  "
                                                         style="border-radius: 25px;"
                                                         href="http://localhost:5164/{{answer.FilePath}}"
                                                         download="true">Download
