--- a/src/app/modules/developer/Components/home/home.component.html
+++ b/src/app/modules/developer/Components/home/home.component.html
@@ -552,7 +552,7 @@ Clients Feedbacks
               </div>
             </div>
             <div>
-              <a href="#!" class="btn btn-primary">Become a mentor</a>
+              <a href="#!" class="btn btn-primary">Become a Mentor or HR</a>
             </div>
           </div>
         </div>
