--- a/src/app/modules/hr/Components/hr-payments/hr-payments.component.html
+++ b/src/app/modules/hr/Components/hr-payments/hr-payments.component.html
@@ -4,27 +4,28 @@
     <div class="col-md-4">
       <div class="card shadow-sm p-3 mb-5 bg-white rounded">
         <h5 class="card-title">Current Month</h5>
-        <p class="display-4">{{currentMonthEarnings | currency}}</p>
-        <p class="text-success">{{currentMonthChange}}% <i class="fas fa-arrow-up"></i> vs last month</p>
+        <p class="display-4">{{paymentTotals.TotalCurrentMonth | currency}}</p>
+        <!-- <p class="text-success">{{currentMonthChange}}% <i class="fas fa-arrow-up"></i> vs last month</p> -->
       </div>
     </div>
     <div class="col-md-4">
       <div class="card shadow-sm p-3 mb-5 bg-white rounded">
         <h5 class="card-title">Last Month</h5>
-        <p class="display-4">{{lastMonthEarnings | currency}}</p>
-        <p class="text-danger">{{lastMonthChange}}% <i class="fas fa-arrow-down"></i> Then last month</p>
+        <p class="display-4">{{paymentTotals.TotalLastMonth| currency}}</p>
+        <!-- <p class="text-danger">{{lastMonthChange}}% <i class="fas fa-arrow-down"></i> Then last month</p> -->
       </div>
     </div>
     <div class="col-md-4">
       <div class="card bg-primary text-white shadow-sm p-3 mb-5 rounded">
         <h5 class="card-title">Total Balance</h5>
-        <p class="display-4">{{totalBalance | currency}}</p>
-        <p>Valid thru: {{cardValidThru}} CVV: ***</p>
+        <p class="display-4">{{paymentTotals.TotalAllTime | currency}}</p>
+        <!-- <p>Valid thru: {{cardValidThru}} CVV: ***</p> -->
       </div>
     </div>
   </div>
 
   <!-- Invoice History Section -->
+ 
   <div class="card shadow-sm p-3 mb-3 bg-white rounded">
     <h5 class="card-title">Invoice History</h5>
     <table class="table table-hover">
@@ -38,14 +39,25 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let invoice of invoiceHistory">
-          <td>{{invoice.id}}</td>
-          <td>{{invoice.date | date:'dd MMM yyyy'}}</td>
-          <td>{{invoice.amount | currency}}</td>
-          <td><span [ngClass]="getStatusClass(invoice.status)">{{invoice.status}}</span></td>
-          <td><button class="btn btn-primary"><i class="fas fa-eye"></i></button></td>
+        @for(session of sessions; track $index){
+        <tr>
+          <td>{{session.Id}}</td>
+          <td>{{session.DateTime | date:'dd MMM yyyy'}}</td>
+          <td>{{session.Total | currency}}</td>
+          @if(session.Status==1){
+          <td><span >Completed</span></td>}
+          @if(session.Status==2){
+            <td><span >Pending</span></td>}
+            @if(session.Status==3){
+              <td><span >Cancel</span></td>}
+            @if(!session.Status)
+            {
+              <td><span >Waiting</span></td>}
+          <td><button class="btn btn-primary"><i class="fas fa-eye" [routerLink]="['/developer/profile/session-details', session.Id ]"></i></button></td>
         </tr>
+        }
       </tbody>
     </table>
   </div>
+
 </div>
